hyrax_tests/errors/bes_syntax_user_error.dds
url = http://localhost:8080/opendap/data/nc/fnoc1.nc.dds?error(3)
-s
